; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_pty.c_devpts_fsetattr.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_pty.c_devpts_fsetattr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.attr = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fd*, i32)* @devpts_fsetattr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @devpts_fsetattr(%struct.fd* %0, i32 %1) #0 {
  %3 = alloca %struct.attr, align 4
  %4 = alloca %struct.fd*, align 8
  %5 = getelementptr inbounds %struct.attr, %struct.attr* %3, i32 0, i32 0
  store i32 %1, i32* %5, align 4
  store %struct.fd* %0, %struct.fd** %4, align 8
  %6 = load %struct.fd*, %struct.fd** %4, align 8
  %7 = getelementptr inbounds %struct.fd, %struct.fd* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = getelementptr inbounds %struct.attr, %struct.attr* %3, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @devpts_setattr_num(i32 %9, i32 %11)
  ret i32 0
}

declare dso_local i32 @devpts_setattr_num(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
